--- a/index.html
+++ b/index.html
@@ -3,31 +3,11 @@
 <head>
 	<title>react+knockout</title>
 	<link rel="stylesheet" type="text/css" href="style/reset.css">
-	<style>
-		#app{
-			margin: 200px auto;
-			text-align: center;
-		}
-		p{
-			line-height: 50px;
-			font-size: 16px;
-			font-weight: bold;
-		}
-		input{
-			border: none;
-			background-color: #e7e7e7;
-			height: 32px;
-			line-height: 32px;
-			padding: 0 10px;
-		}
-		h2{
-			font-size: 36px;
-			line-height: 60px;
-		}
-	</style>
+	<link rel="stylesheet" type="text/css" href="style/index.css">
 </head>
 <body>
 	<div id="app"></div>
+	<div id="dt"></div>
 	<script type="text/javascript" data-main="scripts/main" src="vendor/require/require.js"></script>
 </body>
 </html>
