--- a/index.html
+++ b/index.html
@@ -3,11 +3,14 @@
 <head>
 	<title>react+knockout</title>
 	<link rel="stylesheet" type="text/css" href="style/reset.css">
+	<link rel="stylesheet" type="text/css" href="style/u.min.css">
+	<link rel="stylesheet" type="text/css" href="style/bootstrap.css">
 	<link rel="stylesheet" type="text/css" href="style/index.css">
 </head>
 <body>
 	<div id="app"></div>
 	<div id="dt"></div>
+	<div id="data"></div>
 	<script type="text/javascript" data-main="scripts/main" src="vendor/require/require.js"></script>
 </body>
 </html>
